# Ejercicios-de-Cursos

./: .gitignore  Estadistica Computacional con Python.txt  README.md  campo.py  coordenada.py  index.html  main.py  programacion_dinamica.py  pyproject.toml
Buenas practicas escritura codigo/: buenas practicas escritura de codigo.txt
Buenas practicas escritura codigo/.ipynb_checkpoints/: apuntes_buenas_practicas_escritura_codigo-checkpoint.ipynb
Estadistica Computacional con Python/: Estadistica Computacional con Python.txt  Grafica distribucion estandar.py  distribucion_normal.html  formulas_estadisticas.py  formulas_separadas.py  grafica_distribucion_estandar.py  index.html  intentos_formulas.txt  pi_area.py  programacion_dinamica.py  simulacion_barajas.py  tirar_dados.py
Estadistica Computacional con Python/Formulas Estadisticas/: agrupar_datos.py  analisis_estadistico.py  analisis_estadistico2.py  busqueda_binaria.py  busqueda_binaria2.py  creacion_tabla.py  datos_estadisticos.py  datos_estadisticos2.py  estadistica_descriptiva.py  estadistica_inferencial.py  fdp.csv  formulas_Descriptiva_Bivariada.py  formulas_especiales.py  formulas_estadisticas.py
Estadistica Computacional con Python/problema del borracho/: borracho.py  camino_aleatorio.html  camino_aleatorio.py  campo.py  coordenada.py  index.html
Estadistica Nivel Universitario/: Apuntes Estadistica Nivel Universitario.txt  ejercicios_descriptiva_univariada.py  ejercicios_estadistica.py
Estadistica Nivel Universitario/.ipynb_checkpoints/: apuntes_estadistica_nivel_universitario-checkpoint.ipynb
(+4 files in other folders)
